--- a/SearchImage/Source/Views/Base.lproj/Main.storyboard
+++ b/SearchImage/Source/Views/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <scene sceneID="dcH-wt-2ck">
             <objects>
                 <collectionViewController id="bh0-2q-RBz" customClass="MainViewController" customModule="SearchImage" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="4ze-b5-RXX">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" id="4ze-b5-RXX">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -43,17 +43,20 @@
                                 </collectionViewCellContentView>
                                 <connections>
                                     <outlet property="image" destination="gZC-GC-TTV" id="x0B-DV-L8i"/>
-                                    <segue destination="lyM-CB-Xek" kind="show" id="c6x-jo-Yhx"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
-                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ae8-fY-e4k">
+                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="searchView" id="ae8-fY-e4k">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="Ifc-jL-1Vg">
+                                <searchBar contentMode="redraw" placeholder="검색어를 입력하세요." translatesAutoresizingMaskIntoConstraints="NO" id="Ifc-jL-1Vg">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                                     <textInputTraits key="textInputTraits"/>
+                                    <scopeButtonTitles>
+                                        <string>Title</string>
+                                        <string>Title</string>
+                                    </scopeButtonTitles>
                                 </searchBar>
                             </subviews>
                             <constraints>
@@ -69,6 +72,9 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" title="Search Image" id="C2f-Qb-YvW"/>
+                    <connections>
+                        <segue destination="lyM-CB-Xek" kind="show" identifier="showDetail" id="yh1-B8-fst"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Is-QA-4rj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -77,7 +83,7 @@
         <!--Detail-->
         <scene sceneID="1qi-kM-qdp">
             <objects>
-                <tableViewController id="lyM-CB-Xek" customClass="RDetailViewController" customModule="SearchImage" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="lyM-CB-Xek" customClass="DetailViewController" customModule="SearchImage" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="dqF-dF-xep">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -90,7 +96,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="541"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="qKZ-1f-PH8">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qKZ-1f-PH8">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="541"/>
                                         </imageView>
                                     </subviews>
@@ -181,7 +187,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="1" width="970" height="967"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
