--- a/SearchImage/Source/Modules/Detail/View/Detail.storyboard
+++ b/SearchImage/Source/Modules/Detail/View/Detail.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="0.0" reuseIdentifier="imgCell" rowHeight="541" id="6nZ-O5-iuH" customClass="ImageCell" customModule="SearchImage" customModuleProvider="target">
+                            <tableViewCell contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="0.0" shouldIndentWhileEditing="NO" reuseIdentifier="imgCell" rowHeight="541" id="6nZ-O5-iuH" customClass="ImageCell" customModule="SearchImage" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="24.5" width="414" height="541"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" autoresizesSubviews="NO" opaque="NO" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6nZ-O5-iuH" id="KuP-8P-6cr">
